--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
-    "framer-motion": "^11.0.3",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.1.7",
     "next": "14.1.0",
     "react": "18",
     "react-dom": "18",
-    "react-social-icons": "^6.15.0"
+    "react-social-icons": "^6.15.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
